src/Trip/Trip.css
.Trip {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.Trip h2, .Trip h3 {
  font-weight: 300;
  text-align: center;
}

.Trip header {
  display: flex;
  height: 80px;
  align-items: center;
  border-bottom: 1px solid #EEE;
  padding-right: 60px;
}

.Trip header .mdi {
  width: 20px;
  margin: 20px;
  font-size: 24px;
  cursor: pointer;
  color: #444;
}

.Trip header .mdi-map {
  display: none;
}

.Trip h2 {
  font-size: 24px;
  flex: 1;
}

.Trip h3 {
  font-size: 16px;
  padding: 10px 0;
  border-bottom: 1px solid #EEE;
  letter-spacing: 1px;
}

.Trip .schedule {
  position: relative;
  overflow: scroll;
  flex: 1;
}

.Trip .line {
  border-right: 6px solid #CCC;
  position: absolute;
  left: 27px;
  top: 30px;
  bottom: 30px;
}

.Trip .stopped {
  color: #3972AB;
  font-weight: 600;
  display: flex;
  justify-content: center;
}

@media (max-width: 700px) {
  .Trip header {
    padding-right: 0;
  }

  .Trip header .mdi-google-maps {
    display: block;
  }
}

